# ConfigDiscovery

./: .gitignore  README.md  pyproject.toml
configdiscovery/: __init__.py  claude_tools.py  cli.py  compute.py  discovery.py  github.py  schema.py  skills.py
configs/aurora/: abinit.yaml  ambertools.yaml  ase.yaml  cp2k.yaml  deepmd-kit.yaml  dftbplus.yaml  gpaw.yaml  gromacs.yaml  lammps.yaml  mdanalysis.yaml  nwchem.yaml  openbabel.yaml  openfoam.yaml  openmm.yaml  phonopy.yaml  psi4.yaml  pymatgen.yaml  pyscf.yaml  quantum-espresso.yaml  rdkit.yaml  schnetpack.yaml  siesta.yaml  xtb.yaml
configs/polaris/: abinit.yaml  ambertools.yaml  ase.yaml  cp2k.yaml  deepmd-kit.yaml  dftbplus.yaml  gpaw.yaml  gromacs.yaml  lammps.yaml  mace.yaml  mdanalysis.yaml  namd.yaml  nwchem.yaml  openbabel.yaml  openfoam.yaml  openmm.yaml  orca.yaml  phonopy.yaml  psi4.yaml  pymatgen.yaml  pyscf.yaml  quantum-espresso.yaml  rdkit.yaml  schnetpack.yaml  siesta.yaml  xtb.yaml
docs/: configdiscovery_report.tex  update_february_2026.md
hello-world/: hello.py  hello.sh
scripts/: multi_fidelity_pipeline.py  multi_fidelity_pipeline_aurora.py  test_configs.py
tests/: __init__.py  test_schema.py
